--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "selenium (>=4.34.2,<5.0.0)",
     "pillow (>=11.3.0,<12.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
+    "requests (>=2.32.4,<3.0.0)",
 ]
 
 [[tool.poetry.source]]
