--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pillow (>=11.3.0,<12.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
     "requests (>=2.32.4,<3.0.0)",
+    "rich-argparse (>=1.7.1,<2.0.0)",
 ]
 classifiers=[
     'Programming Language :: Python :: 3',
