--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "dvhelper"
-version = "0.0.1"
+version = "0.0.0"
 description = "An information scraper for avfans.com"
 authors = [
     {name = "Walkline Wang", email = "walkline@gmail.com"}
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = "<=3.15,>=3.10"
 dependencies = [
     "urllib3 (>=2.5.0,<3.0.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
@@ -16,12 +16,6 @@ dependencies = [
     "tqdm (>=4.67.1,<5.0.0)",
     "requests (>=2.32.4,<3.0.0)",
     "rich-argparse (>=1.7.1,<2.0.0)",
-]
-classifiers=[
-    'Programming Language :: Python :: 3',
-    'License :: OSI Approved :: MIT License',
-    'Operating System :: Microsoft :: Windows',
-    'Environment :: Console',
 ]
 
 [project.urls]
