--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "tqdm (>=4.67.1,<5.0.0)",
     "requests (>=2.32.4,<3.0.0)",
     "rich-argparse (>=1.7.1,<2.0.0)",
+    "webdriver-manager (>=4.0.0,<5.0.0)",
 ]
 
 [project.urls]
