--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = "<=3.15,>=3.10"
+requires-python = "<3.15,>=3.10"
 dependencies = [
     "urllib3 (>=2.5.0,<3.0.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
@@ -20,7 +20,7 @@ dependencies = [
 ]
 
 [project.urls]
-repository = "https://github.com/Walkline80/DV-Helper"
+repository = "https://github.com/dvhelper/dvhelper"
 
 [project.scripts]
 dvhelper = "dvhelper:main"
@@ -33,3 +33,8 @@ priority = "primary"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pyinstaller (>=6.16.0,<7.0.0)"
+]
