refactor(ci): 将提交历史获取逻辑提取到独立脚本
重构GitHub Actions工作流，将复杂的提交历史获取逻辑提取到单独的PowerShell脚本中，提高代码可维护性和可测试性。新脚本提供了更健壮的标签处理和错误恢复机制。

Signed-off-by: Walkline Wang <walkline@gmail.com>

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -83,45 +83,18 @@ jobs:
           echo "archive_name=${ZIP_NAME}" >> $env:GITHUB_OUTPUT
           echo "tag_name=${TAG_NAME}" >> $env:GITHUB_OUTPUT
 
-      # 7. 获取详细的提交历史
+      # 7. 获取详细的提交历史并设置为输出
       - name: Get detailed commit history
         id: get_commits
         shell: pwsh
         run: |
           # 获取当前标签名称
           $CURRENT_TAG = "${{ steps.create_archive.outputs.tag_name }}"
+          Write-Host "执行提交历史获取脚本，当前标签: $CURRENT_TAG"
           
-          # 配置git log格式
-          $format = '- %s (%an)'
-          
-          # 尝试获取提交历史，严格控制范围
-          try {
-            # 方法1：优先尝试获取上一个标签到当前标签的提交
-            $LAST_TAG = git describe --tags --abbrev=0 $CURRENT_TAG^ 2>$null
-            if ($LAST_TAG) {
-              $COMMITS = git log $LAST_TAG..$CURRENT_TAG --pretty=format:$format --reverse
-              
-              # 如果上一个标签和当前标签之间确实没有提交，使用明确消息
-              if (-not $COMMITS) {
-                $COMMITS = "- $LAST_TAG到$CURRENT_TAG之间没有新提交"
-              }
-            } else {
-              # 如果没有上一个标签，说明这是第一个版本
-              $COMMITS = "- 初始版本发布"
-            }
-          } catch {
-            Write-Host "Error fetching commit history: $_"
-          }
-          
-          # 确保COMMITS不为空，提供默认消息
-          if (-not $COMMITS) {
-            $COMMITS = "- 暂无提交信息"
-          }
-          
-          # 使用文件追加方式设置环境变量，确保多行内容正确处理
-          Add-Content -Path $env:GITHUB_ENV -Value "commits<<EOF"
-          Add-Content -Path $env:GITHUB_ENV -Value $COMMITS
-          Add-Content -Path $env:GITHUB_ENV -Value "EOF"
+          # 调用外部脚本并传递当前标签作为参数
+          Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass -Force
+          .\make\get_commit_history.ps1 -TagName $CURRENT_TAG
 
       # 8. 创建GitHub Release并上传压缩包
       - name: Create GitHub Release
@@ -129,7 +102,7 @@ jobs:
         with:
           files: ${{ steps.create_archive.outputs.archive_name }}
           name: Release ${{ steps.create_archive.outputs.tag_name }}
-          # 直接在YAML中使用多行字符串格式，确保Markdown正确渲染
+          # 使用环境变量引用提交历史
           body: |
             ## 更新内容
             
