--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,5 +36,6 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "pyinstaller (>=6.16.0,<7.0.0)"
+    "pyinstaller (>=6.16.0,<7.0.0)",
+    "babel (>=2.17.0,<3.0.0)"
 ]
