--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,5 +37,6 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "pyinstaller (>=6.16.0,<7.0.0)",
-    "babel (>=2.17.0,<3.0.0)"
+    "babel (>=2.17.0,<3.0.0)",
+    "pytest (>=8.4.2,<9.0.0)"
 ]
