--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "requests (>=2.32.4,<3.0.0)",
     "rich-argparse (>=1.7.1,<2.0.0)",
     "webdriver-manager (>=4.0.0,<5.0.0)",
+    "colorama (>=0.4.6,<0.5.0)",
 ]
 
 [project.urls]
