--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ build-backend = "poetry.core.masonry.api"
 dev = [
     "pyinstaller (>=6.16.0,<7.0.0)",
     "babel (>=2.17.0,<3.0.0)",
-    "pytest (>=8.4.2,<9.0.0)"
+    "pytest (>=8.4.2,<9.0.0)",
+    "pytest-cov (>=7.0.0,<8.0.0)"
 ]
 
 [tool.pytest.ini_options]
