ci: 添加JUnit测试报告并更新CI配置
- 在测试工作流中添加JUnit XML报告生成，并将测试结果上传至Codecov
- 同时更新.gitignore以忽略生成的junit.xml文件

Signed-off-by: Walkline Wang <walkline@gmail.com>

--- a/.github/workflows/tests-codecov.yml
+++ b/.github/workflows/tests-codecov.yml
@@ -52,10 +52,17 @@ jobs:
         continue-on-error: true
 
       - name: Run tests
-        run: poetry run pytest --cov --cov-branch --cov-report=xml
+        run: poetry run pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml
 
-      - name: Upload results to Codecov
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: dvhelper/dvhelper
+
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: dvhelper/dvhelper
