--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ readme = "README.md"
 requires-python = "<3.15,>=3.10"
 dependencies = [
     "urllib3 (>=2.5.0,<3.0.0)",
-    "beautifulsoup4 (>=4.13.4,<5.0.0)",
     "selenium (>=4.34.2,<5.0.0)",
     "pillow (>=11.3.0,<12.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
@@ -18,6 +17,7 @@ dependencies = [
     "rich-argparse (>=1.7.1,<2.0.0)",
     "webdriver-manager (>=4.0.0,<5.0.0)",
     "colorama (>=0.4.6,<0.5.0)",
+    "lxml (>=6.0.2,<7.0.0)",
 ]
 
 [project.urls]
