ci: 更新测试配置以简化本地测试命令
- 在pyproject.toml中增加pytest的覆盖率选项
- 在GitHub Actions中禁用配置文件以避免冲突

Signed-off-by: Walkline Wang <walkline@gmail.com>

--- a/.github/workflows/tests-codecov.yml
+++ b/.github/workflows/tests-codecov.yml
@@ -52,7 +52,7 @@ jobs:
         continue-on-error: true
 
       - name: Run tests
-        run: poetry run pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml
+        run: poetry run pytest -c NONE --cov --cov-branch --cov-report=xml --junitxml=junit.xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
