ci(tests-codecov): 优化测试工作流触发条件
仅在相关文件变更时触发测试工作流，包括Python文件、测试目录和依赖
配置文件，以减少不必要的CI运行

Signed-off-by: Walkline Wang <walkline@gmail.com>

--- a/.github/workflows/tests-codecov.yml
+++ b/.github/workflows/tests-codecov.yml
@@ -2,7 +2,17 @@ name: Run tests and upload coverage
 
 on:
   push:
+    paths:
+      - '**.py'
+      - 'tests/**'
+      - 'pyproject.toml'
+      - 'poetry.lock'
   pull_request:
+    paths:
+      - '**.py'
+      - 'tests/**'
+      - 'pyproject.toml'
+      - 'poetry.lock'
   workflow_dispatch:
 
 jobs:
